Fix modals on mobile

--- a/packages/daheim-app-ui/src/default.css
+++ b/packages/daheim-app-ui/src/default.css
@@ -15,7 +15,7 @@ body, html {
 	font-size: 16px;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-	/*height: 100%;*/
+	height: 100%;
 	transform: translateZ(0);
 }
 
